--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,29 @@
+:root {
+  --text-opacity: 1;
+  --border-opacity: 1;
+  --ring-inset: inset;
+  --ring-color: rgb(0,0,0,.1);
+  --ring-offset-width: 0px;
+  --ring-offset-color: #fff;
+  --ring-offset-shadow: inset 0 0 0 0px #fff;
+  --ring-shadow: var(--ring-inset) 0 0 0 calc(1px + var(--ring-offset-width)) var(--ring-color);
+  --shadow: 0 0 #0000;
+  --font-mono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  line-height: 1.5;
+  word-break: keep-all;
+  word-wrap: break-word;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  display: block;
+  background-color: #f8fafc
 }
 
 a {
@@ -17,11 +37,11 @@ a {
 
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0 0;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   height: 100vh;
 }
 
